# semi-automatic-image-annotation

./: .gitignore  LICENSE  README.md  annotator.py  main.py  pyproject.toml
.github/workflows/: black.yml  code_analysis.yml  conde_analysis.yml  tests.yml
annotator/: annotation_store.py  annotation_ui.py  bounding_box.py  classes_popup.py  content.py  controller.py  header_bar.py  sidebar_left.py  sidebar_right.py  ui.py
annotator/model/: base_model.py  mock_model.py  yolo_detection_model.py
annotator/store/: annotation_export.py  annotation_store.py  classes_store.py  image_store.py  single_image.py
tests/: test_controller.py
tests/store/: base_environment.py  test_annotation_export.py  test_classes_store.py  test_image_store.py  test_single_image.py
